# wallet_system

./: .gitignore  Cargo.toml  main.rs  readme.MD
src/: accounts.rs  basic_account.rs  basic_wallet.rs  lib.rs  main.rs  multi_currency_wallet.rs  premium_account.rs  wallets.rs
tests/: basic_account_integration_tests.rs  basic_wallet_integration_tests.rs  multi_currency_wallet_integration_tests.rs  premium_account_integration_tests.rs
