[package]
name = "wallet_system"
version = "0.1.0"
edition = "2021"
authors = ["kanth <kanth.explorer@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.1"


[lib]
name = "wallet_system"
path = "src/lib.rs"

[[test]]
name = "basic_account_integration_tests"
path = "tests/basic_account_integration_tests.rs"