[package]
name = "wallet_system"
version = "0.1.0"
edition = "2021"
authors = ["kanth"]

[dependencies]
rand = "0.9.0-alpha.1"
clap = "3.0"

[lib]
name = "wallet_system"
path = "src/lib.rs"

[[test]]
name = "basic_account_integration_tests"
path = "tests/basic_account_integration_tests.rs"

[[bin]]
name = "wallet_cli"
path = "src/main.rs"
