[package]
name = "wallet_system"
version = "0.1.3"
edition = "2021"
authors = ["kanth"]
description = "A wallet system simulation in Rust."
license = "MIT"

[dependencies]
rand = "0.9.0-alpha.1"
clap = "3.0"

[[test]]
name = "basic_account_integration_tests"
path = "tests/basic_account_integration_tests.rs"

[[bin]]
name = "wallet_cli"
path = "src/main.rs"
